--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funciones = funciones.replace(\"#s.i.\",0)\n",
+    "funciones = funciones.replace(\"#n.s.\",0)\n",
+    "funciones = funciones.replace(\"#n.a.\",0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -293,52 +304,52 @@
        "      <td>Soporte y mesa de ayuda interna (ejemplo: equi...</td>\n",
        "      <td>Operación y mantención de software de gestión ...</td>\n",
        "      <td>Operación y mantención de software orientados ...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "      <td>Arquitectura y gestión de infraestructura (dat...</td>\n",
        "      <td>Sistemas de Seguridad de la Información/Cibers...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2023-10-30 15:25:00</td>\n",
        "      <td>Municipalidades</td>\n",
        "      <td>Municipalidad de Cerrillos</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2023-10-30 17:17:00</td>\n",
        "      <td>Municipalidades</td>\n",
        "      <td>Municipalidad de Máfil</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2023-10-31 17:09:00</td>\n",
        "      <td>Municipalidades</td>\n",
        "      <td>Municipalidad de San Clemente</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
-       "      <td>#s.i.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -361,11 +372,11 @@
        "      <td>Municipalidad de Coelemu</td>\n",
        "      <td>Adquisiciones y gestión de contratos de tecnol...</td>\n",
        "      <td>Soporte y mesa de ayuda interna (ejemplo: equi...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "      <td>Operación y mantención de software orientados ...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "      <td>Arquitectura y gestión de infraestructura (dat...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "      <td>Otro (¿cuál?)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -380,7 +391,7 @@
        "      <td>Desarrollo de software y mejoras perfectivas (...</td>\n",
        "      <td>Arquitectura y gestión de infraestructura (dat...</td>\n",
        "      <td>Sistemas de Seguridad de la Información/Cibers...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>425</th>\n",
@@ -391,10 +402,10 @@
        "      <td>Soporte y mesa de ayuda interna (ejemplo: equi...</td>\n",
        "      <td>Operación y mantención de software de gestión ...</td>\n",
        "      <td>Operación y mantención de software orientados ...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "      <td>Arquitectura y gestión de infraestructura (dat...</td>\n",
        "      <td>Sistemas de Seguridad de la Información/Cibers...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>426</th>\n",
@@ -408,7 +419,7 @@
        "      <td>Desarrollo de software y mejoras perfectivas (...</td>\n",
        "      <td>Arquitectura y gestión de infraestructura (dat...</td>\n",
        "      <td>Sistemas de Seguridad de la Información/Cibers...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>427</th>\n",
@@ -419,10 +430,10 @@
        "      <td>Soporte y mesa de ayuda interna (ejemplo: equi...</td>\n",
        "      <td>Operación y mantención de software de gestión ...</td>\n",
        "      <td>Operación y mantención de software orientados ...</td>\n",
-       "      <td>#n.s.</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Sistemas de Seguridad de la Información/Cibers...</td>\n",
-       "      <td>#n.s.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -430,18 +441,18 @@
        "</div>"
       ],
       "text/plain": [
-       "0     Fecha de respuesta              Tipo  \\\n",
-       "1    2023-10-25 10:53:00   Municipalidades   \n",
-       "2    2023-10-25 13:18:00   Municipalidades   \n",
-       "3    2023-10-30 15:25:00   Municipalidades   \n",
-       "4    2023-10-30 17:17:00   Municipalidades   \n",
-       "5    2023-10-31 17:09:00   Municipalidades   \n",
-       "..                   ...               ...   \n",
-       "423  2024-01-01 22:41:00   Municipalidades   \n",
-       "424  2024-01-02 06:49:00  Gobierno Central   \n",
-       "425  2024-01-02 09:51:00   Municipalidades   \n",
-       "426  2024-01-02 10:36:00   Municipalidades   \n",
-       "427  2024-01-02 13:03:00   Municipalidades   \n",
+       "0    Fecha de respuesta              Tipo  \\\n",
+       "1   2023-10-25 10:53:00   Municipalidades   \n",
+       "2   2023-10-25 13:18:00   Municipalidades   \n",
+       "3   2023-10-30 15:25:00   Municipalidades   \n",
+       "4   2023-10-30 17:17:00   Municipalidades   \n",
+       "5   2023-10-31 17:09:00   Municipalidades   \n",
+       "..                  ...               ...   \n",
+       "423 2024-01-01 22:41:00   Municipalidades   \n",
+       "424 2024-01-02 06:49:00  Gobierno Central   \n",
+       "425 2024-01-02 09:51:00   Municipalidades   \n",
+       "426 2024-01-02 10:36:00   Municipalidades   \n",
+       "427 2024-01-02 13:03:00   Municipalidades   \n",
        "\n",
        "0                                       P1.1.1  \\\n",
        "1                       Municipalidad de Pinto   \n",
@@ -459,9 +470,9 @@
        "0                                               P2.5.1  \\\n",
        "1    Adquisiciones y gestión de contratos de tecnol...   \n",
        "2    Adquisiciones y gestión de contratos de tecnol...   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
        "423  Adquisiciones y gestión de contratos de tecnol...   \n",
        "424  Adquisiciones y gestión de contratos de tecnol...   \n",
@@ -472,9 +483,9 @@
        "0                                               P2.5.2  \\\n",
        "1    Soporte y mesa de ayuda interna (ejemplo: equi...   \n",
        "2    Soporte y mesa de ayuda interna (ejemplo: equi...   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
        "423  Soporte y mesa de ayuda interna (ejemplo: equi...   \n",
        "424  Soporte y mesa de ayuda interna (ejemplo: equi...   \n",
@@ -485,11 +496,11 @@
        "0                                               P2.5.3  \\\n",
        "1    Operación y mantención de software de gestión ...   \n",
        "2    Operación y mantención de software de gestión ...   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
-       "423                                              #n.s.   \n",
+       "423                                                  0   \n",
        "424  Operación y mantención de software de gestión ...   \n",
        "425  Operación y mantención de software de gestión ...   \n",
        "426  Operación y mantención de software de gestión ...   \n",
@@ -498,9 +509,9 @@
        "0                                               P2.5.4  \\\n",
        "1    Operación y mantención de software orientados ...   \n",
        "2    Operación y mantención de software orientados ...   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
        "423  Operación y mantención de software orientados ...   \n",
        "424  Operación y mantención de software orientados ...   \n",
@@ -510,47 +521,47 @@
        "\n",
        "0                                               P2.5.5  \\\n",
        "1    Desarrollo de software y mejoras perfectivas (...   \n",
-       "2                                                #n.s.   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "2                                                    0   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
-       "423                                              #n.s.   \n",
+       "423                                                  0   \n",
        "424  Desarrollo de software y mejoras perfectivas (...   \n",
-       "425                                              #n.s.   \n",
+       "425                                                  0   \n",
        "426  Desarrollo de software y mejoras perfectivas (...   \n",
-       "427                                              #n.s.   \n",
+       "427                                                  0   \n",
        "\n",
        "0                                               P2.5.6  \\\n",
        "1    Arquitectura y gestión de infraestructura (dat...   \n",
        "2    Arquitectura y gestión de infraestructura (dat...   \n",
-       "3                                                #s.i.   \n",
-       "4                                                #s.i.   \n",
-       "5                                                #s.i.   \n",
+       "3                                                    0   \n",
+       "4                                                    0   \n",
+       "5                                                    0   \n",
        "..                                                 ...   \n",
        "423  Arquitectura y gestión de infraestructura (dat...   \n",
        "424  Arquitectura y gestión de infraestructura (dat...   \n",
        "425  Arquitectura y gestión de infraestructura (dat...   \n",
        "426  Arquitectura y gestión de infraestructura (dat...   \n",
-       "427                                              #n.s.   \n",
+       "427                                                  0   \n",
        "\n",
        "0                                               P2.5.7         P2.5.8  \n",
        "1    Sistemas de Seguridad de la Información/Cibers...  Otro (¿cuál?)  \n",
-       "2    Sistemas de Seguridad de la Información/Cibers...          #n.s.  \n",
-       "3                                                #s.i.          #s.i.  \n",
-       "4                                                #s.i.          #s.i.  \n",
-       "5                                                #s.i.          #s.i.  \n",
+       "2    Sistemas de Seguridad de la Información/Cibers...              0  \n",
+       "3                                                    0              0  \n",
+       "4                                                    0              0  \n",
+       "5                                                    0              0  \n",
        "..                                                 ...            ...  \n",
-       "423                                              #n.s.  Otro (¿cuál?)  \n",
-       "424  Sistemas de Seguridad de la Información/Cibers...          #n.s.  \n",
-       "425  Sistemas de Seguridad de la Información/Cibers...          #n.s.  \n",
-       "426  Sistemas de Seguridad de la Información/Cibers...          #n.s.  \n",
-       "427  Sistemas de Seguridad de la Información/Cibers...          #n.s.  \n",
+       "423                                                  0  Otro (¿cuál?)  \n",
+       "424  Sistemas de Seguridad de la Información/Cibers...              0  \n",
+       "425  Sistemas de Seguridad de la Información/Cibers...              0  \n",
+       "426  Sistemas de Seguridad de la Información/Cibers...              0  \n",
+       "427  Sistemas de Seguridad de la Información/Cibers...              0  \n",
        "\n",
        "[427 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
