--- a/main.ipynb
+++ b/main.ipynb
@@ -672,12 +672,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## P4.3"
+    "## P4.3 (en realiadad P4.4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -734,12 +734,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## P5.1"
+    "## P5.1 (en realidad P4.4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -946,299 +946,6 @@
     "plt.title('Cantidad de personal en oficinas de partes')\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pivot_table\n",
-    "df = df.sort_values(ascending=False,by='P5.3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>P5.3</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tipo</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Gobierno Central</th>\n",
-       "      <td>3743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Municipalidades</th>\n",
-       "      <td>1269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Educación Superior</th>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nivel local-regional</th>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0                     P5.3\n",
-       "Tipo                      \n",
-       "Gobierno Central      3743\n",
-       "Municipalidades       1269\n",
-       "Educación Superior      68\n",
-       "Nivel local-regional    61"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0\n",
-       "P5.3    5141\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>P5.3</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tipo</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Educación Superior</th>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gobierno Central</th>\n",
-       "      <td>3743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Municipalidades</th>\n",
-       "      <td>1269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nivel local-regional</th>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0                     P5.3\n",
-       "Tipo                      \n",
-       "Educación Superior      68\n",
-       "Gobierno Central      3743\n",
-       "Municipalidades       1269\n",
-       "Nivel local-regional    61"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pivot_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tipo</th>\n",
-       "      <th>P5.3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>Gobierno Central</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>426</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>427</th>\n",
-       "      <td>Municipalidades</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>427 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0                Tipo  P5.3\n",
-       "1     Municipalidades     1\n",
-       "2     Municipalidades     1\n",
-       "3     Municipalidades     0\n",
-       "4     Municipalidades     0\n",
-       "5     Municipalidades     0\n",
-       "..                ...   ...\n",
-       "423   Municipalidades     2\n",
-       "424  Gobierno Central    25\n",
-       "425   Municipalidades     1\n",
-       "426   Municipalidades     6\n",
-       "427   Municipalidades     4\n",
-       "\n",
-       "[427 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PersOfiPartes"
    ]
   },
   {
